# FindMyPage

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.html  test.py
chrome-extension/: README.md  background.js  content-script.js  manifest.json  popup.html  popup.js
chrome-extension/images/: README.txt
mcp/: action.py  agent.py  agent_service.py  data_model.py  decision.py  llm.py  mcp_server.py  memory.py  perception.py
mcp/faiss_index/: doc_index_cache.json  metadata.json
